--- a/.gitignore
+++ b/.gitignore
@@ -77,5 +77,5 @@ model_state.pt
 influxdb_data/
 tests/localnet/wallets.yaml
 tests/localnet/repo_store
-tests/localnet/.dependancy_installed_flag
+tests/localnet/utils/.dependancy_installed_flag
 tests/localnet/wallets
