git sources update

--- a/tests/localnet/utils/git_sources.yaml
+++ b/tests/localnet/utils/git_sources.yaml
@@ -9,4 +9,4 @@
 - repo_name: "cubit"
   repo_url: "https://github.com/opentensor/cubit.git"
   release_tag: null
-  branch: "main"
+  branch: "master"
